namespaces/photoview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: photoview
spec:
  selector:
    matchLabels:
      app: photoview
  template:
    metadata:
      labels:
        app: photoview
    spec:
      containers:
      - name: photoview
        image: viktorstrate/photoview:2
        resources:
          limits:
            memory: "1Gi"
            cpu: "1000m"
        ports:
        - containerPort: 80
        volumeMounts:
          - mountPath: "/photos"
            name: nextcloud
            readOnly: true
            subPath: data/simon/files/Photos
      - name: photoview-db
        image: mariadb:10.5
        resources:
          limits:
            memory: "600Mi"
            cpu: "1000m"
      volumes:
      - name: nextcloud
        persistentVolumeClaim:
          claimName: nextcloud-nextcloud
          readOnly: true
