namespaces/photoview/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photoview
spec:
  selector:
    app: photoview
  ports:
  - port: 80
    targetPort: 80
