namespaces/photoview/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: photoview-ingress
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`photo.codegameeat.com`)
      services:
        - name: photoview
          port: 80
  tls:
    certResolver: le
